--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.23.1",
-    "svelte-check": "^4.1.4",
-    "typescript": "~5.7.3",
-    "vite": "^6.2.0"
+    "svelte-check": "^4.1.5",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2"
   }
 }
