--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "svelte": "^5.23.1",
     "svelte-check": "^4.1.5",
     "typescript": "^5.8.2",
-    "vite": "^6.2.2"
+    "vite": "^6.2.2",
+    "vite-plugin-singlefile": "^2.2.0"
   }
 }
