--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "bun run build && vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
+    "package": "cd dist && bestzip newtab.zip * && cd .."
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "bestzip": "^2.2.1",
     "svelte": "^5.23.1",
     "svelte-check": "^4.1.5",
     "typescript": "^5.8.2",
